# chip8-emu

./: CMakeLists.txt
src/: chip8.cpp  chip8.hpp  main.cpp
